# cppsonic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp
libs/: CMakeLists.txt
libs/tinyxml2/: CMakeLists.txt
src/: cppsonic.cpp  cppsonic.h
